--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Frontend Mentor | Product preview card component</title>
   </head>
 
