--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -17,50 +11,54 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./index.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,700&family=Montserrat:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
+
     <title>Frontend Mentor | Product preview card component</title>
   </head>
-
   <body>
-    <div class="wrapper">
-      <div class="img-wrapper">
-        <picture>
+    <main>
+      <article class="product">
+        <picture class="product__img">
           <source
-            media="(min-width: 1024px)"
-            srcset="./images/image-product-desktop.jpg"
-          />
-          <img
-            src="./images/image-product-mobile.jpg"
-            alt="A bottle of perfume"
-          />
-        </picture>
-      </div>
+            media="(min-width: 600px)"
+            srcset="images/image-product-desktop.jpg" />
+          <img src="images/image-product-mobile.jpg" alt="Bottle of perfume"
+        /></picture>
 
-      <section>
-        <h2>Perfume</h2>
+        <section class="product__content">
+          <h2 class="product__category">Perfume</h2>
+          <h1 class="product__name">Gabrielle Essence Eau De Parfum</h1>
+          <p class="product__description">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
 
-        <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+          <div class="product__price">
+            <span class="product__current-price">$149.99</span>
+            <span class="product__original-price">$169.99</span>
+          </div>
 
-        <p class="product-description">
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-
-        <div class="price">
-          <span>$149.99</span>
-          <span>$169.99</span>
-        </div>
-
-        <button class="cart">
-          <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
-              fill="#FFF"
-            />
-          </svg>
-          <span>Add to Cart</span>
-        </button>
-      </section>
-    </div>
+          <button class="btn flex-group">
+            <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                fill="#FFF"
+              />
+            </svg>
+            <span>Add to Cart</span>
+          </button>
+        </section>
+      </article>
+    </main>
   </body>
 </html>
